include_HEADERS = \
	libewf.h

pkginclude_HEADERS = \
	libewf/codepage.h \
	libewf/definitions.h \
	libewf/error.h \
	libewf/extern.h \
	libewf/features.h \
	libewf/types.h

EXTRA_DIST = \
	libewf.h.in \
	libewf/definitions.h.in \
	libewf/features.h.in \
	libewf/types.h.in

DISTCLEANFILES = \
	libewf.h \
	libewf/definitions.h \
	libewf/features.h \
	libewf/types.h \
	Makefile \
	Makefile.in

