EXTRA_DIST = \
	libewf.pmdoc/01bin.xml \
	libewf.pmdoc/01bin.xml.in \
	libewf.pmdoc/01bin-contents.xml \
	libewf.pmdoc/02include.xml \
	libewf.pmdoc/02include.xml.in \
	libewf.pmdoc/02include-contents.xml \
	libewf.pmdoc/03lib.xml \
	libewf.pmdoc/03lib.xml.in \
	libewf.pmdoc/03lib-contents.xml \
	libewf.pmdoc/04share.xml \
	libewf.pmdoc/04share.xml.in \
	libewf.pmdoc/04share-contents.xml \
	libewf.pmdoc/index.xml \
	libewf.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libewf.pmdoc/01bin.xml
	/bin/rm -f libewf.pmdoc/02include.xml
	/bin/rm -f libewf.pmdoc/03lib.xml
	/bin/rm -f libewf.pmdoc/04share.xml
	/bin/rm -f libewf.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

