man_MANS = \
	ewfacquire.1 \
	ewfacquirestream.1 \
	ewfexport.1 \
	ewfinfo.1 \
	ewfmount.1 \
	ewfrecover.1 \
	ewfverify.1 \
	libewf.3

EXTRA_DIST = \
	ewfacquire.1 \
	ewfacquirestream.1 \
	ewfexport.1 \
	ewfinfo.1 \
	ewfmount.1 \
	ewfrecover.1 \
	ewfverify.1 \
	libewf.3

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

