MSVSCPP_FILES = \
	bzip2/bzip2.vcproj \
	ewf.net/ewf.net.vcproj \
	ewf_test_access_control_entry/ewf_test_access_control_entry.vcproj \
	ewf_test_analytical_data/ewf_test_analytical_data.vcproj \
	ewf_test_attribute/ewf_test_attribute.vcproj \
	ewf_test_bit_stream/ewf_test_bit_stream.vcproj \
	ewf_test_byte_size_string/ewf_test_byte_size_string.vcproj \
	ewf_test_case_data/ewf_test_case_data.vcproj \
	ewf_test_chunk_data/ewf_test_chunk_data.vcproj \
	ewf_test_chunk_group/ewf_test_chunk_group.vcproj \
	ewf_test_chunk_table/ewf_test_chunk_table.vcproj \
	ewf_test_compression/ewf_test_compression.vcproj \
	ewf_test_data_chunk/ewf_test_data_chunk.vcproj \
	ewf_test_date_time/ewf_test_date_time.vcproj \
	ewf_test_date_time_values/ewf_test_date_time_values.vcproj \
	ewf_test_deflate/ewf_test_deflate.vcproj \
	ewf_test_device_handle/ewf_test_device_handle.vcproj \
	ewf_test_device_information/ewf_test_device_information.vcproj \
	ewf_test_digest_hash/ewf_test_digest_hash.vcproj \
	ewf_test_digest_section/ewf_test_digest_section.vcproj \
	ewf_test_error/ewf_test_error.vcproj \
	ewf_test_error2_section/ewf_test_error2_section.vcproj \
	ewf_test_file_entry/ewf_test_file_entry.vcproj \
	ewf_test_glob/ewf_test_glob.vcproj \
	ewf_test_guid/ewf_test_guid.vcproj \
	ewf_test_handle/ewf_test_handle.vcproj \
	ewf_test_hash_sections/ewf_test_hash_sections.vcproj \
	ewf_test_hash_values/ewf_test_hash_values.vcproj \
	ewf_test_header_sections/ewf_test_header_sections.vcproj \
	ewf_test_header_values/ewf_test_header_values.vcproj \
	ewf_test_huffman_tree/ewf_test_huffman_tree.vcproj \
	ewf_test_info_handle/ewf_test_info_handle.vcproj \
	ewf_test_io_handle/ewf_test_io_handle.vcproj \
	ewf_test_lef_extended_attribute/ewf_test_lef_extended_attribute.vcproj \
	ewf_test_lef_file_entry/ewf_test_lef_file_entry.vcproj \
	ewf_test_lef_permission/ewf_test_lef_permission.vcproj \
	ewf_test_lef_source/ewf_test_lef_source.vcproj \
	ewf_test_lef_subject/ewf_test_lef_subject.vcproj \
	ewf_test_ltree_section/ewf_test_ltree_section.vcproj \
	ewf_test_md5_hash_section/ewf_test_md5_hash_section.vcproj \
	ewf_test_media_values/ewf_test_media_values.vcproj \
	ewf_test_notify/ewf_test_notify.vcproj \
	ewf_test_permission_group/ewf_test_permission_group.vcproj \
	ewf_test_platform/ewf_test_platform.vcproj \
	ewf_test_read_io_handle/ewf_test_read_io_handle.vcproj \
	ewf_test_restart_data/ewf_test_restart_data.vcproj \
	ewf_test_section_descriptor/ewf_test_section_descriptor.vcproj \
	ewf_test_sector_range/ewf_test_sector_range.vcproj \
	ewf_test_segment_file/ewf_test_segment_file.vcproj \
	ewf_test_segment_table/ewf_test_segment_table.vcproj \
	ewf_test_serialized_string/ewf_test_serialized_string.vcproj \
	ewf_test_session_section/ewf_test_session_section.vcproj \
	ewf_test_sha1_hash_section/ewf_test_sha1_hash_section.vcproj \
	ewf_test_single_file_tree/ewf_test_single_file_tree.vcproj \
	ewf_test_single_files/ewf_test_single_files.vcproj \
	ewf_test_source/ewf_test_source.vcproj \
	ewf_test_support/ewf_test_support.vcproj \
	ewf_test_truncate/ewf_test_truncate.vcproj \
	ewf_test_verification_handle/ewf_test_verification_handle.vcproj \
	ewf_test_volume_section/ewf_test_volume_section.vcproj \
	ewf_test_write/ewf_test_write.vcproj \
	ewf_test_write_chunk/ewf_test_write_chunk.vcproj \
	ewf_test_write_io_handle/ewf_test_write_io_handle.vcproj \
	ewfacquire/ewfacquire.vcproj \
	ewfacquirestream/ewfacquirestream.vcproj \
	ewfdebug/ewfdebug.vcproj \
	ewfexport/ewfexport.vcproj \
	ewfinfo/ewfinfo.vcproj \
	ewfmount/ewfmount.vcproj \
	ewfrecover/ewfrecover.vcproj \
	ewfverify/ewfverify.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcdatetime/libcdatetime.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libewf/libewf.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libhmac/libhmac.vcproj \
	libodraw/libodraw.vcproj \
	libsmdev/libsmdev.vcproj \
	libsmraw/libsmraw.vcproj \
	libuna/libuna.vcproj \
	pyewf/pyewf.vcproj \
	zlib/zlib.vcproj \
	libewf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

